<resources>
    <string name="app_name">Muhurat New</string>
    <string name="app_desc">Find out auspicious timings from your finger tips</string>
    <string name="action_loc_settings">Location Settings</string>
    <string name="action_app_settings">App Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_faq">FAQs</string>
    <string name="calc_btn_lbl">Calculate</string>
    <string name="select_lbl">Select a date</string>
    <string name="title_activity_muhurat_summary">Muhurat</string>
    <string name="send_to">Share using...</string>
    <string name="title_activity_scrolling">About Muhurat</string>
    <string name="about_text">
        "Muhurat helps you figure out Auspicious timings from your finger tips\n\n"
        "It shall calculate the Muhurat (Rahu, Gulika, YamaGanda etc.,) based on your "
        "last tracked location longitude and latitude\n\n"
        "When location is not available, this application sets Bangalore (India) as the default location\n\n"
        "Seeking your suggestions/feedback to improve and make this even more better. "
        "Please share your feedback via balaji.katika@gmail.com\n\n"
        "DEDICATIONS: I would like to dedicate this application to my family: my wife Prathyusha who gave me the inspiration to"
        " design and create this application. Due to her conscientious for auspicious things by adhering to Muhurat, "
        "I have decided to gift her this application. "
        "And my two little daughters Tanvisha and Rithvika. You provided the inspiration"
        " necessary for me to complete this process and also sacrificed immensely along the way.\n\n"
    </string>
    <string name="about_faq_note">
    "Please note that below FAQs are for informational only. You are recommended to contact experts for exact meaning"
    </string>
    <string name="about_faq_gulika_qn">
    "What is Gulika ?"
    </string>
    <string name="about_faq_gulika_ans">
        "It is believed that any activity carried out during Gulika (Flowering Time) period will be repeated once again. "
        "So its an auspicious time for starting activities like building a house, buying assets or vehicles. Marriage should "
        "not be conducted during this period for obvious reasons. And no dead body should not be taken out of the house to the "
        "cremation ground during Gulika."
    </string>
    <string name="about_faq_rahu_qn">
    "What is Rahu Kala?"
    </string>
    <string name="about_faq_rahu_ans">
        "Any activity or journey, whether of short or long distance, initiated or undertaken during Rahu(Dragon’s Head) Kaalam is "
        "believed to meet a significant degree of failure, lack of success ,delay, postponement or no conclusive result. "
        "To counteract Rahu Kaalam people avoid commencing important money-related or travel activities, during this time. "
        "They leave their current location or have their meetings, or start their activities earlier than or after the Rahu Kaalam "
        "period.Of course,you could use Rahu Kaalam to your advantage if you want postponements and delays.Also its considered very "
        "auspicious to perfom Durga pooja during Rahu Kaalam"
    </string>
    <string name="about_faq_yama_qn">
    "What is Yama Kala?"
    </string>
    <string name="about_faq_yama_ans">
        "Yamagandam means death time. Only death ceremonies are performed during Yamagandam. Any activity commenced during this time "
        "invites the ‘death’ of the work or energies relating to that work. So activities during Yamagandam leads to a failure "
        "or destruction of the end-result. Avoid commencing important, money-related or travel activities, during this time. "
        "Leave your current location or have your meeting, or start your activity earlier than or after the Yamagandam time. "
        "Don’t be tempted to use this time-slot to end some issue as it is dangerous to plan an activity during this time as "
        "the end- result could be a failure for you."
    </string>
    <string name="about_faq_shoolam_qn">
    "What is Shoolam?"
    </string>
    <string name="about_faq_shoolam_ans">
        "Travel from an area of residence or where one has stayed the night, heading in the Shoolam direction, it is believed, "
        "creates a piercing and flowing away of karmic and personal energy in all areas of life and activities. So Shoolam direction "
        "is to be avoided as the first outbound journey of the day from one’s home or temporary residence. To counteract Shoolam "
        "some people avoid all journeys heading towards the Shoolam direction of the day. "
    </string>
    <string name="about_faq_app_qn">
        "Your Application seems to be showing timings different from other standard websites/apps ? For e.g few "
        "websites/apps report Yama ganda occurs from 4:30 PM till 6:00 PM on Sunday"
    </string>
    <string name="about_faq_app_ans">
        "Our Application attempts to show as accurate times (in mins) as possible. Please note that Kaala's differ across location "
        "based on longitude/latitude and sunrise/sunset at that location. Our application considers location of the user and the "
        "sunrise/sunset timings of that location"
    </string>
    <string name="about_faq_how_qn">
        "How do you determine/calculate Sunrise/Sunset for the location ?"
    </string>
    <string name="about_faq_how_ans">
        "Our algorithm is based on http://williams.best.vwh.net/sunrise_sunset_algorithm.htm"
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="versionCode">2</string>
    <string name="versionName">1.1</string>
    <string name="title_activity_faq">FAQs</string>
    <string name="banner_ad_unit_id">ca-app-pub-8897561363168408/9317661370</string>
    <string name="sunRiseText">"Sun Rise : "</string>
    <string name="sunSetText">"Sun Set  : "</string>
    <string name="guiliKalaText">"Guli Kala"</string>
    <string name="rahuKalaText">"Rahu Kala"</string>
    <string name="yamaKalaText">"Yama Kala"</string>
    <string name="shoolamKalaText">"Shoolam"</string>
    <string name="shareDelimiter">" - "</string>
    <string name="about_help_gulika">"Any activity carried out during Gulika (Flowering time) period will be repeated once again."
    "Click on FAQ menu item for more info"
    </string>
    <string name="about_help_rahu">"Any activity or journey, whether of short or long distance, initiated or undertaken during "
        "Rahu(Dragon’s Head) Kaalam is believed to meet a significant degree of failure, lack of success ,delay, postponement or "
        "no conclusive result. Click on FAQ menu item for more info"
    </string>
    <string name="about_help_yama">"Yama gandam means death time. Only death ceremonies are performed during Yamagandam. "
        "Click on FAQ menu item for more info"
    </string>
    <string name="about_help_shoolam">"Shoolam direction is to be avoided as the first outbound journey of the day from one’s "
        "home or temporary residence. Click on FAQ menu item for more info"
    </string>
</resources>
