<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tr.muhurath.app.muhurat.Muhurat">
    <item
        android:id="@+id/action_loc_settings"
        android:orderInCategory="101"
        android:title="@string/action_loc_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="102"
        android:title="@string/action_faq"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="103"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_share"
        android:orderInCategory="104"
        app:showAsAction="always"
        android:title="Share"
        app:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider" />
</menu>
